--- a/experiments/3-faultless-disagreement/faultless-disagreement.html
+++ b/experiments/3-faultless-disagreement/faultless-disagreement.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Corpus-based paraphrase endorsement</title>
+    <title>Corpus-based faultless disagreement</title>
 
     <!--JS-->
 
@@ -61,7 +61,7 @@
 
   <div class="slide" id="instructions1">
     <h3>Instructions</h3>
-    <p> You will see 30 sentences and rate possible paraphrases of them. In other words, you will tell us what you think the speaker intended to communicate.</p>
+    <p> You will see 40 short dialogues. In each dialogue, speakers disagree about a comparison. Your task is to determine whether one speaker must be wrong, or whether both speakers can be right.</p>
     <!-- <p class="instruction_condition">{{}}</p> -->
     <button onclick="_s.button()">Continue</button>
   </div>
@@ -69,20 +69,19 @@
   <div class="slide" id="multi_slider">
 
   <p class="name_said"></p>
-    <p><span class="man1">{{}}</span> said:</p>
 
-    <p class="utterance1">{{}}</p>
+    <p>Consider the following exchange:</p></br>
 
-    <p>Then, <span class="man2">{{}}</span> said:</p>
+    <p><span class="man1">{{}}</span> said: <b><span class="utterance1">{{}}</span></b></p>
 
-    <p class="utterance2">{{}}</p>
+    <p>Then, <span class="man2">{{}}</span> said: <b><span class="utterance2">{{}}</span></b></p></br>
 
-    <p>Does the sentence make sense?</p>
+    <p>Does the exchange make sense?</p>
     <label><input type="radio"  name="sense" value="Yes"/>Yes</label>
     <label><input type="radio"  name="sense" value="No"/>No</label>
     </br></br>
 
-    <p class="name_meant"></p>
+    <p>Can both <span class="man1">{{}}</span> and <span class="man2">{{}}</span> be right?</p>
     <table id="multi_slider_table" class="slider_table">
       <tr><td></td><td class="left">definitely not</td><td class="right">definitely</td></tr> 
     </table>
